--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <h2>Education</h2>
         <ul>
             <li>Computer Science Engineering (AI & DS) - Dhanalakshmi Srinivasan University (2022-2026)</li>
-            <li>Intermediate - Narayana Junior College (2020-2022) - 90%</li>
+            <li>Intermediate - sri saraswathi Junior College (2020-2022) - 90%</li>
             <li>SSC - Gurudatta High School (2019-2022) - 91%</li>
         </ul>
     </section>
