--- a/index.html
+++ b/index.html
@@ -74,27 +74,27 @@
 <body>
 
     <header>
-        <h3>Uma Maheswara Reddy</h3>
-        <p>Email: umamaheswarreddyb383@gmail.com | Phone: 6303005845</p>
-        <p>Location: Atlavaripalli, Prakasam, Andhra Pradesh</p>
+        <strong><h3>Uma Maheswara Reddy</h3></strong>
+        
     </header>
 
     <nav>
-        <a onclick="showSection('careerObjective')">Career Objective</a>
+        <a onclick="showSection('about')">About</a>
         <a onclick="showSection('education')">Education</a>
         <a onclick="showSection('skills')">Skills</a>
-        <a onclick="showSection('areasOfInterest')">Areas of Interest</a>
-        <a onclick="showSection('personalTraits')">Personal Traits</a>
+        <a onclick="showSection('technicalSkills')">technicalSkills</a>
         <a onclick="showSection('achievements')">Achievements</a>
         <a onclick="showSection('miniProject')">Mini Project</a>
         <a onclick="showSection('workshop')">Workshop</a>
-        <a onclick="showSection('references')">References</a>
     </nav>
 
-    <section id="careerObjective">
-        <h2>Career Objective</h2>
-        <p>I aspire to start my own company and develop new technology in the IT sector.</p>
-    </section>
+    <section id="about">
+    <h2>About Me</h2>
+    <div class="photoFrame">
+        <img src="https://1drv.ms/f/s!AlPKt3mS6CFcgQBdfES7jo9A3Xwv?e=IiSMAx" alt="Your Name"style="width: 300px; height: 300px;" />
+    </div>
+    <p>Hello, I'm [Your Name]. I specialize in Manufacturing Technology and Production Engineering, and I bring a unique blend of technical skills and creativity to my work.</p>
+</section>
 
     <section id="education">
         <h2>Education</h2>
@@ -126,19 +126,16 @@
         <!-- Your Skills Section Code Goes Here -->
     </section>
 
-    <section id="areasOfInterest">
-        <h2>Areas of Interest</h2>
-        <p>Manufacturing Technology, Production Engineering</p>
-    </section>
-
-    <section id="personalTraits">
-        <h2>Personal Traits</h2>
-        <ul>
-            <li>Creative and logical</li>
-            <li>Problem-solving ability</li>
-        </ul>
-    </section>
-
+    <section id="technicalSkills">
+    <h2>Technical Skills</h2>
+    <p>I specialize in Manufacturing Technology and Production Engineering, with a focus on:</p>
+    <ul>
+        <li><strong>Creative and Logical Problem-Solving:</strong> I possess strong analytical and critical thinking skills, allowing me to approach challenges with innovative solutions.</li>
+        <li><strong>Communication:</strong> I am adept at conveying complex technical concepts in a clear and understandable manner. Effective communication is crucial for successful collaboration and project implementation.</li>
+        <li><strong>Script Writing:</strong> Proficient in writing scripts to automate processes, enhancing efficiency and reducing manual workload. This technical skill contributes to streamlined operations and increased productivity.</li>
+        <li><strong>Leadership Qualities:</strong> I exhibit leadership qualities, fostering a collaborative and productive team environment. I am experienced in guiding teams towards project success, ensuring a cohesive and motivated work atmosphere.</li>
+    </ul>
+</section>
     <section id="achievements">
         <h2>Achievements and Extra-Curricular Activities</h2>
         <p>Won 2nd prize in state-level MMA championship</p>
@@ -203,16 +200,10 @@
         <!-- Your Workshop Section Code Goes Here -->
     </section>
 
-    <section id="references">
-        <h2>References</h2>
-        <p>Available upon request</p>
-    </section>
-
     <footer>
-        <p>Date of Birth: 13-05-2005 | Nationality: Indian | Religion: Hindu</p>
-        <p>Languages Known: Telugu, Tamil, English</p>
+        <h3>Contact</h3>
+        <p>Mobile Number:6303005845</p>
+        <p>Email:<a href="mailto:umamaheswarreddyb383@gmail.com">umamaheswarreddyb383@mail.com</a></p>
+        <p>Instagrm:<a href="https://instagram.com/mr_indecent_5659?igshid=YTQwZjQ0NmI0OA==">@mr_indecent_5659</a></p>
+        <p>Location: Atlavaripalli, Prakasam, Andhra Pradesh</p>
     </footer>
-
-</body>
-
-</html>
